--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,7 +4,7 @@
   top: 100%;
   width: 8.296vw;
   min-width: 7rem;
-  z-index: 999;
+  z-index: 99999;
 }
 
 #Navbar .navbar-header {
